# SPH_FluidSimulation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  results.csv  script.py  tests.txt  timer_results.txt
CL/: Common.h  cl.hpp  opencl.hpp
Classes/: Container.cpp  Container.h  Container_temp.cpp  OpenCLContainer.cpp  OpenCLContainer.h  SPHObject.cpp  SPHParticle.cpp  SPHParticle.h  Timer.cpp
Kernel/: kernel.cl  kernel2.cl  kernel_temp.cl
